# data_science_daily_work

./: .gitignore  README.md  main.py  pyproject.toml
Api_work/: README.md  kaggle.ipynb  mkaggle.py  pyproject.toml  work1.py  work2.py
Api_work/ml_api_based_project/: project_moved_readme.md
DS_work/: README.md  analysis.ipynb
csv_data/: GOOGL.xlsx
csv_data/10-Feb/: city_loc.xlsx
csv_data/18-Feb/: Sales target.xlsx
csv_data/24-Feb/: flights_cleaned.xlsx
csv_data/datasets-session-16/: bollywood.xlsx  ipl.xlsx  subs.xlsx
csv_data/datasets-session-20/: courses.xlsx  reg-month2.xlsx  students.xlsx
csv_data/datasets-session-32/: smartphones_cleaned_v6.xlsx
matplotlip/: m1.ipynb  m2_advance.ipynb
ploty/: p1.ipynb
pydantic_learn/: pydantic_learn.md  pydantic_learning.ipynb
pydantic_learn/patient_based_pydantic_learn/: README.md  basic_pydantic.py  computed_field_in_pydantic.py  field_validator.py  model_validator.py  nested_model_in_pydantic.py
python/: README.md
python/basics/: comments.ipynb  data_types.ipynb  keywords_identifiers.ipynb  literals.ipynb  print_function.ipynb  python_basics.ipynb  type_conversion.ipynb  user_input.ipynb  variables.ipynb
python/control_flow/: for_loop.ipynb  if_else.ipynb  modules.ipynb  operators.ipynb  while_loop.ipynb
python/data_structures/: comprehensions.ipynb  dictionaries.ipynb  lists.ipynb  sets.ipynb  tuples.ipynb  zip_function.ipynb
python/functions/: args_kwargs.ipynb  functions.ipynb  (+5 more)
test/: number-of-deaths-from-natural-disasters.csv  t1.ipynb  t2.ipynb  t3.ipynb  t4.ipynb  t5.ipynb  t6.ipynb
(+9 files in other folders)
